syntax = "proto3";

package profile;

option go_package = "./src/infrastructure/handler/grpc/profile/pb";

service ProfileService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Save(SaveRequest) returns (SaveResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

message Profile {
  int64       profileId = 1;
  string      profileLanguage = 2;
  ProfileData profileData = 3;
  string      lastUpdate = 4;
  bool        status = 5;
}

// List
message ListRequest {
  optional int64  profileId = 1;
  optional string profileLanguage = 2;
}

message ListResponse {
  repeated Profile profiles = 1;
}

// Save
message SaveRequest {
  string      profileLanguage = 2;
  ProfileData profileData = 3;
}

message SaveResponse {
  int64       profileId = 1;
  string      profileLanguage = 2;
  ProfileData profileData = 3;
  string      lastUpdate = 4;
  bool        status = 5;
}

// Update
message UpdateRequest {
  Profile profile = 1;
}

message UpdateResponse {
  Profile profile = 1;
}

//--------

message ProfileData {
  string name = 1;
  string profession = 2;
  string professionalProfile = 3;
  string personalProfile = 4;
  repeated Project projects = 5;
  repeated Knowledge knowledges = 6;
}

message Project {
  string id = 1;
  string name = 2;
  string description = 3;
  string detailHtml = 4;
  string mainImage = 5;
  int32  order = 6;
}

message Knowledge {
  string id = 1;
  string name = 2;
  string type = 3;
  int32 level = 4;
  string description = 5;
  repeated string categories = 6;
}